# rag-challenge

./: README.md  benchmark_report.md  pyproject.toml
benchmark/: generate_questions.py
chunking/: README.md  main.py
data/: chunks_3_questions.json  chunks_questions.json
data/CMA_txt/: CMA2016_1.1_Decisions_1_to_2.txt  CMA2016_1.1_Decisions_1_to_2_questions.json  CMA2018_1.3_Decisions_13_to_20.txt  CMA2018_1.3_Decisions_3_to_12.txt  CMA2019_2_Decisions_1_to_9.txt  CMA2021_3_2021_Decisions_5.txt  CMA2021_3_Decisions_1_to_4.txt  CMA2021_3_Decisions_6_to_24.txt  CMA2022_4_Decisions_12_to_24.txt  CMA2022_4_Decisions_1_to_5.txt  CMA2022_4_Decisions_6_to_11.txt  CMA2023_5_Decisions_17_to_21.txt  CMA2023_5_Decisions_1_to_5.txt  CMA2023_5_Decisions_6_to_16.txt  CMA2024_6_Decisions_16_to_23.txt  CMA2024_6_Decisions_1_to_7.txt  CMA2024_6_Decisions_8_to_15.txt
data/CMP_txt/: CMP2014_10 Decisions_1_to_8.txt  CMP2015_11_Decisions_1_to_5.txt  CMP2015_11_decisions_6_to_12.txt  CMP2016_12_Decisions_1_to_8.txt  CMP2017_13_Decisions_1_to_7.txt  CMP2018_14_Decisions_1_to_5.txt  CMP2019_15_Decisions_1_to_7.txt  CMP2021_16_Decisions_1_to_10.txt  CMP2022_17_Decisions_1_to_9.txt  CMP2023_18_Decisions_1_to_7.txt  CMP2024_19_Decisions_1_to_5.txt
data/COP_txt/: cp2014_20 - 2014 - decision 1.txt  cp2014_20 - 2014 - decision 13 to 24.txt  cp2014_20 - 2014 - decision 2 to 12.txt  cp2015_21 - 2015 - decision 1.txt  cp2015_21 - 2015 - decisions 14 to 23.txt  cp2015_21 - 2015 - decisions 2 to 13.txt  cp2016_22 - 2016 - decisions 1 to 13.txt  cp2016_22 - 2016 - decisions 14 to 22.txt  cp2017_23 - 2017 - decisions 1 to 12.txt  cp2017_23 - 2017 - decisions 13 to 22.txt  cp2018_24 - 2018 - decisions 1 to 12.txt  cp2018_24 - 2018 - decisions 13 to 20.txt  cp2019_25 - 2019 - Decisions 1 to 6.txt  cp2019_25 - 2019 - Decisions 7 to 18.txt  cp2021_26 - 2021 - Decisions 1 to 11.txt  cp2021_26 - 2021 - Decisions 12 to 23.txt  cp2022_27 - 2022 - Decisions 1 to 12.txt  (+6 more)
embedding/: embedding_with_keyword_search.py  test_embedding.py
tests/: test_embeddings.py
unfccc_rag/: __init__.py  app.py  chunking.py  embeddings.py  mcp.py  retrieval.py  server.py  utils.py
web-app/: README.md  app.py
(+41 files in other folders)
