[project]
name = "rag-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.1.0",
    "gradio>=5.47.2",
    "openai>=1.109.1",
    "pydantic-ai>=1.0.10",
    "transformers>=4.56.2",
    "sentence-transformers>=5.1.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
