[project]
name = "unfccc-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.1.0",
    "coloredlogs>=15.0.1",
    "gradio>=5.47.2",
    "mcp[cli]>=1.15.0",
    "openai>=1.109.1",
    "pydantic-ai>=1.0.10",
    "sentence-transformers>=5.1.1",
    "transformers>=4.56.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ipython>=9.5.0",
    "pdbpp>=0.11.7",
    "pytest>=8.4.2",
    "pytest-sugar>=1.1.1",
    "ruff>=0.13.2",
    "ty>=0.0.1a21",
]

[tool.hatch.build.targets.wheel]
packages = ["unfccc_rag"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
chunk-txt-documents = "unfccc_rag.chunking:chunk_documents"
generate-synthetic-dataset = "unfccc_rag.benchmark.synthetic_dataset:generate"
run-qa-benchmark = "unfccc_rag.benchmark.evaluate:run"
serialize-embeddings = "unfccc_rag.embeddings:serialize_embeddings"
start-rag-server = "unfccc_rag.mcp:start_server"
start-web-app = "unfccc_rag.app:launch"
